--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=movie-management
 
-spring.datasource.url=jdbc:mysql://localhost:3306/ebook?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/movies_db?serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=AbCd123@
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
