--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
+# redirect to swagger-ui
+spring.web.resources.add-mappings=true
+spring.mvc.view.prefix=/
+spring.mvc.view.suffix=.html
